# Highline_Ridge

./: .gitignore  BUILD.md  CMakeLists.txt  CmakeLists.txt  README.md  Unknown.png.xz  storyboard.md
_github_restore/: Location.cpp
build-fresh/: CMakeCache.txt  Highline Ridge  Makefile  cmake_install.cmake  compile_commands.json
build-fresh/resources/icons/: wallet_icon.png.xz
build-fresh/resources/images/: private_overlook.png.xz
build-repro/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Highline Ridge  Makefile  cmake_install.cmake  compile_commands.json
build-repro/resources/: game_config.json  scenes.json
build-repro/resources/audio/music/: cabin_theme.mp3.xz
build-repro/resources/audio/sfx/: door_close.mp3.xz
build-repro/resources/images/: cabin.png.xz  saloon_interior.png.xz
build-sys/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  compile_commands.json
build-sys-old/: CMakeCache.txt
build-sys/dialog_test.dSYM/Contents/: Info.plist
build-sys/resources/: conversations.json  item_combinations.json  items.json  milestones.json  rooms.json  scenes.json  xai_api_key  xai_api_key.example
build-sys/resources/audio/ambient/: fireplace.mp3.xz  narrow_path_aspen_grove.mp3.xz  saloon_pub_crowd.mp3.xz  town_footsteps.mp3.xz  wind.mp3.xz
build-sys/resources/audio/sfx/: door_open.mp3.xz
build-sys/resources/icons/: bow_tie_icon.png.xz  box_of_nails_icon.png.xz  copper_wire_spool_icon.png.xz  crude_lantern_icon.png.xz  cuff_links_icon.png.xz  custom_jacket_icon.png.xz  custom_shirt_icon.png.xz  custom_trousers_icon.png.xz  fedora_icon.png.xz  hair_tonic_icon.png.xz  hand_drill_icon.png.xz  hand_lantern_icon.png.xz  hunting_knife_icon.png.xz  lamp_oil_icon.png.xz  mens_cologne_icon.png.xz  mens_duster_icon.png.xz  mens_pea_coat_icon.png.xz  mid_anvil_icon.png.xz  mining_pick_icon.png.xz  shaving_brush_icon.png.xz  straight_razor_icon.png.xz  wallet_slip_icon.png.xz  wick_icon.png.xz  wool_fabric_sample_icon.png.xz
build-sys/resources/images/: alpine_hardware.png.xz  bow_tie_examine.png.xz  cabin_under_rug.png.xz  copper_wire_spool_examine.png.xz  crude_lantern_examine.png.xz  cuff_links_examine.png.xz  custom_jacket_examine.png.xz  custom_shirt_examine.png.xz  custom_trousers_examine.png.xz  hair_tonic_examine.png.xz  lard_examine.png.xz  mens_cologne_examine.png.xz  mens_duster_examine.png.xz  mens_pea_coat_examine.png.xz  mountain_road_supply_row.png.xz  ridge_haberdashery.png.xz  saloon_owner_office.png.xz  saloon_owner_office_desk.png.xz  saloon_side_passage.png.xz  saloon_supply_closet.png.xz  shaving_brush_examine.png.xz  shovel_examine.png.xz  straight_razor_examine.png.xz  wallet_examine.png.xz  wick_examine.png.xz  wool_fabric_sample_examine.png.xz
build-test/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Highline Ridge  Makefile  RaylibGame  cmake_install.cmake  compile_commands.json
build-test/resources/: conversations.json  scenes.json
build-test/resources/audio/ambient/: town_ambient.mp3.xz  wind.mp3.xz
resources/: cabin_exterior.png.xz  conversations.json  game_config.json  items.json  rooms.json  saloon_balcony.png.xz  saloon_front.png.xz  scenes.json  wallet_examine.jpg.xz  wallet_icon.jpg.xz  xai_api_key.example
resources/audio/ambient/: blacksmith_hammer.mp3.xz  cliff_wind_gusts.mp3.xz  fireplace.mp3.xz  forge_bellows.mp3.xz  forge_fire.mp3.xz  horse_stable.mp3.xz  kitchen_muffled.mp3.xz  saloon_restaurant_crowd.mp3.xz
resources/audio/sfx/: door_creak.mp3.xz  hypoxia_fade_in.mp3.xz  hypoxia_fade_out.mp3.xz
resources/audio/tts/saloon_balcony/: blue_woman_intro.seg0.mp3.xz  blue_woman_intro.seg1.mp3.xz  blue_woman_intro.seg2.mp3.xz  blue_woman_intro.seg3.mp3.xz  blue_woman_resume.mp3.xz  ignore_comment.mp3.xz  looking_for_apology.mp3.xz  looking_for_apology_after.mp3.xz  remember_that.mp3.xz  rough_night.seg0.mp3.xz  rough_night.seg1.mp3.xz  rough_night.seg2.mp3.xz  rough_night_after.seg0.mp3.xz  rough_night_after.seg1.mp3.xz  rough_night_after.seg2.mp3.xz  rough_night_after.seg3.mp3.xz  stay_last_night.mp3.xz  stay_last_night.seg0.mp3.xz  stay_last_night.seg1.mp3.xz  stay_last_night.seg2.mp3.xz  (+1 more)
resources/icons/: blacksmith_hammer_icon.png.xz  copper_wire_spool_icon.png.xz  garden_rake_icon.png.xz  lard_icon.png.xz  shovel_icon.png.xz
resources/images/: blacksmith_hammer_examine.png.xz  box_of_nails_examine.png.xz  cabin_cellar_open.png.xz  cabin_kitchen.png.xz  cabin_under_rug.png.xz  charcoal_burner_camp.png.xz  copper_wire_spool_examine.png.xz  cottonwood_meadow.png.xz  garden_rake_examine.png.xz  hand_drill_examine.png.xz  ice_house.png.xz  locket_open_examine.png.xz  locket_open_examine_backup.png.xz  mid_anvil_examine.png.xz  mining_pick_examine.png.xz  mountain_road.png.xz  mountain_road_trade_row.png.xz  narrow_path.png.xz  saloon_balcony_backup.png.xz  saloon_bedroom.png.xz  saloon_interior_carrie_encounter.png.xz  saloon_service_hall.png.xz  scene_under_construction.png.xz  survey_stake_line.png.xz  winding_alpine_path.png.xz
src/: ActionStruct.h  ActiveScene.cpp  ActiveScene.h  AudioManager.cpp  AudioManager.h  AudioTypes.h  BlackjackGame.cpp  BlackjackGame.h  BlackjackPanel.cpp  BlackjackPanel.h  Button.cpp  Button.h  ButtonMgr.cpp  ButtonMgr.h  ConversationManager.cpp  ConversationManager.h  ConversationRequirements.cpp  ConversationStruct.h  ExitRequirementDef.h  GameApplication.cpp  GameConfig.cpp  GameConfig.h  GameSession.cpp  GameSession.h  ImageCompression.cpp  ImageCompression.h  InteractionMgr.cpp  InteractionMgr.h  InventoryItem.h  InventoryMgr.cpp  InventoryMgr.h  ItemDatabase.cpp  ItemDatabase.h  ItemDef.h  ItemInstance.cpp  ItemInstance.h  Location.cpp  Location.h  LocationStruct.h  MilestoneDatabase.cpp  (+45 more)
tools/: compress_audio.py  compress_images.py  gen_haberdashery_items.py  gen_hardware_items.py  generate_hypoxia_sfx.py  haberdashery_catalog.json  hardware_catalog.json  install_crafting_images.sh  install_hardware_images.sh  merge_hardware_conversation.py  shop_utils.py
tools/scene-editor/: CMakeLists.txt  main.cpp
(+35 files in other folders)
